[gd_scene load_steps=12 format=3 uid="uid://8cbihh6410yp"]

[ext_resource type="PackedScene" uid="uid://8awe4usnucyv" path="res://sources/minigames/base/base_minigame.tscn" id="1_oeg4r"]
[ext_resource type="Script" path="res://sources/minigames/parakeets/parakeets_minigame.gd" id="2_x6xn5"]
[ext_resource type="AudioStream" uid="uid://csbrl2rxli4tp" path="res://language_resources/french/minigames/parakeets/audio/kalulu/kalulu_intro_parakeets_language.mp3" id="3_ofxb4"]
[ext_resource type="Texture2D" uid="uid://dv1ombj8eolb1" path="res://assets/minigames/parakeets/graphic/background.png" id="3_xjvte"]
[ext_resource type="AudioStream" uid="uid://c58a2q8b26vpn" path="res://language_resources/french/minigames/parakeets/audio/kalulu/kalulu_end_parakeets_language.mp3" id="4_01e28"]
[ext_resource type="Texture2D" uid="uid://clvh07xfgjmri" path="res://assets/minigames/parakeets/graphic/tree_trunk.png" id="4_unuga"]
[ext_resource type="Texture2D" uid="uid://d3n327me83on7" path="res://assets/minigames/parakeets/graphic/tree_branch.png" id="5_46kss"]
[ext_resource type="Texture2D" uid="uid://dpx72xoqt8lkq" path="res://assets/minigames/parakeets/graphic/gauge_icon_parakeet_empty.png" id="5_yt7mv"]
[ext_resource type="Texture2D" uid="uid://di2qcv6jw8wh0" path="res://assets/minigames/parakeets/graphic/gauge_icon_parakeet_full.png" id="6_46vnr"]
[ext_resource type="Texture2D" uid="uid://sjxhvbq8ijbw" path="res://assets/minigames/parakeets/graphic/nest_back.png" id="6_g64mq"]
[ext_resource type="Texture2D" uid="uid://ctvnu3s3sgwwf" path="res://assets/minigames/parakeets/graphic/nest_front.png" id="7_3mibn"]

[node name="Parakeets" instance=ExtResource("1_oeg4r")]
script = ExtResource("2_x6xn5")
difficulty = 4
lesson_nb = 4
fly_duration = 3.0
max_number_of_lives = 5
help_kalulu_speech = ExtResource("3_ofxb4")
win_kalulu_speech = ExtResource("4_01e28")

[node name="MinigameUI" parent="." index="1"]
empty_progression_icon = ExtResource("5_yt7mv")
full_progression_icon = ExtResource("6_46vnr")

[node name="Background" type="TextureRect" parent="GameRoot" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xjvte")

[node name="TreeTrunk" type="TextureRect" parent="GameRoot" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -900.0
offset_right = 147.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_unuga")

[node name="Branches" type="Control" parent="GameRoot/TreeTrunk" index="0"]
anchors_preset = 0
offset_left = -1234.0
offset_right = -1194.0
offset_bottom = 40.0

[node name="TreeBranch" type="TextureRect" parent="GameRoot/TreeTrunk/Branches" index="0"]
layout_mode = 0
offset_left = 462.0
offset_top = 676.0
offset_right = 1286.0
offset_bottom = 756.0
texture = ExtResource("5_46kss")

[node name="Position" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch" index="0"]
anchors_preset = 0
offset_left = 109.0
offset_top = 1.0
offset_right = 149.0
offset_bottom = 41.0

[node name="Position2" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch" index="1"]
anchors_preset = 0
offset_left = 390.0
offset_top = 1.0
offset_right = 430.0
offset_bottom = 41.0

[node name="Position3" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch" index="2"]
anchors_preset = 0
offset_left = 658.0
offset_top = 1.0
offset_right = 698.0
offset_bottom = 41.0

[node name="TreeBranch2" type="TextureRect" parent="GameRoot/TreeTrunk/Branches" index="1"]
layout_mode = 0
offset_left = 1312.0
offset_top = 431.0
offset_right = 2187.0
offset_bottom = 511.0
texture = ExtResource("5_46kss")

[node name="Position" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch2" index="0"]
anchors_preset = 0
offset_left = 203.0
offset_right = 292.0
offset_bottom = 21.0

[node name="Position2" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch2" index="1"]
anchors_preset = 0
offset_left = 517.0
offset_right = 557.0
offset_bottom = 40.0

[node name="Position3" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch2" index="2"]
anchors_preset = 0
offset_left = 794.0
offset_right = 834.0

[node name="TreeBranch3" type="TextureRect" parent="GameRoot/TreeTrunk/Branches" index="2"]
layout_mode = 0
offset_left = 1360.0
offset_top = 839.0
offset_right = 2344.0
offset_bottom = 919.0
texture = ExtResource("5_46kss")

[node name="Position" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch3" index="0"]
anchors_preset = 0
offset_left = 130.0
offset_right = 170.0
offset_bottom = 40.0

[node name="Position2" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch3" index="1"]
anchors_preset = 0
offset_left = 420.0
offset_right = 460.0
offset_bottom = 40.0

[node name="Position3" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch3" index="2"]
anchors_preset = 0
offset_left = 689.0
offset_right = 729.0
offset_bottom = 40.0

[node name="Position4" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch3" index="3"]
anchors_preset = 0
offset_left = 902.0
offset_right = 942.0
offset_bottom = 40.0

[node name="TreeBranch4" type="TextureRect" parent="GameRoot/TreeTrunk/Branches" index="3"]
layout_mode = 0
offset_left = 498.0
offset_top = 1145.0
offset_right = 1307.0
offset_bottom = 1225.0
texture = ExtResource("5_46kss")

[node name="Position" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch4" index="0"]
anchors_preset = 0
offset_left = 163.0
offset_right = 203.0
offset_bottom = 40.0

[node name="Position2" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch4" index="1"]
anchors_preset = 0
offset_left = 514.0
offset_right = 554.0
offset_bottom = 40.0

[node name="TreeBranch5" type="TextureRect" parent="GameRoot/TreeTrunk/Branches" index="4"]
layout_mode = 0
offset_left = 1289.0
offset_top = 1502.0
offset_right = 2040.0
offset_bottom = 1582.0
texture = ExtResource("5_46kss")

[node name="TreeNestBack" type="TextureRect" parent="GameRoot/TreeTrunk/Branches/TreeBranch5" index="0"]
layout_mode = 0
offset_left = 268.0
offset_top = -97.0
offset_right = 618.0
offset_bottom = 10.0
texture = ExtResource("6_g64mq")

[node name="TreeNestFront" type="TextureRect" parent="GameRoot/TreeTrunk/Branches/TreeBranch5/TreeNestBack" index="0"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_3mibn")

[node name="Position1" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch5/TreeNestBack/TreeNestFront" index="0"]
anchors_preset = 0
offset_left = 109.0
offset_top = 45.0
offset_right = 149.0
offset_bottom = 85.0

[node name="Position2" type="Control" parent="GameRoot/TreeTrunk/Branches/TreeBranch5/TreeNestBack/TreeNestFront" index="1"]
anchors_preset = 0
offset_left = 239.0
offset_top = 45.0
offset_right = 279.0
offset_bottom = 85.0

[node name="Parakeets" type="Control" parent="GameRoot" index="2"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FlyFrom" type="Control" parent="GameRoot" index="3"]
anchors_preset = 0
offset_left = 2832.0
offset_top = 1157.0
offset_right = 2872.0
offset_bottom = 1197.0

[node name="Position1" type="Control" parent="GameRoot/FlyFrom" index="0"]
layout_mode = 3
anchors_preset = 0
offset_left = -2494.0
offset_top = -1437.0
offset_right = -2454.0
offset_bottom = -1397.0

[node name="Position2" type="Control" parent="GameRoot/FlyFrom" index="1"]
layout_mode = 3
anchors_preset = 0
offset_left = -1738.0
offset_top = -1398.0
offset_right = -1698.0
offset_bottom = -1358.0

[node name="Position3" type="Control" parent="GameRoot/FlyFrom" index="2"]
layout_mode = 3
anchors_preset = 0
offset_left = -944.0
offset_top = -1341.0
offset_right = -904.0
offset_bottom = -1301.0

[node name="Position4" type="Control" parent="GameRoot/FlyFrom" index="3"]
layout_mode = 3
anchors_preset = 0
offset_left = 154.0
offset_top = -916.0
offset_right = 194.0
offset_bottom = -876.0

[node name="Position5" type="Control" parent="GameRoot/FlyFrom" index="4"]
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -528.0
offset_right = 36.0
offset_bottom = -488.0

[node name="Position6" type="Control" parent="GameRoot/FlyFrom" index="5"]
layout_mode = 3
anchors_preset = 0
offset_left = -39.0
offset_top = -205.0
offset_right = 1.0
offset_bottom = -165.0

[node name="Position7" type="Control" parent="GameRoot/FlyFrom" index="6"]
layout_mode = 3
anchors_preset = 0
offset_left = -33.0
offset_top = 360.0
offset_right = 7.0
offset_bottom = 400.0

[node name="Position8" type="Control" parent="GameRoot/FlyFrom" index="7"]
layout_mode = 3
anchors_preset = 0
offset_left = -3198.0
offset_top = 164.0
offset_right = -3158.0
offset_bottom = 204.0

[node name="Position9" type="Control" parent="GameRoot/FlyFrom" index="8"]
layout_mode = 3
anchors_preset = 0
offset_left = -3386.0
offset_top = -297.0
offset_right = -3346.0
offset_bottom = -257.0

[node name="Position10" type="Control" parent="GameRoot/FlyFrom" index="9"]
layout_mode = 3
anchors_preset = 0
offset_left = -3068.0
offset_top = -579.0
offset_right = -3028.0
offset_bottom = -539.0

[node name="Position11" type="Control" parent="GameRoot/FlyFrom" index="10"]
layout_mode = 3
anchors_preset = 0
offset_left = -3160.0
offset_top = -967.0
offset_right = -3120.0
offset_bottom = -927.0

[node name="Position12" type="Control" parent="GameRoot/FlyFrom" index="11"]
layout_mode = 3
anchors_preset = 0
offset_left = -2744.0
offset_top = -1312.0
offset_right = -2704.0
offset_bottom = -1272.0

[node name="FlyAway" type="Control" parent="GameRoot" index="4"]
anchors_preset = 0
offset_left = 3046.0
offset_top = 1048.0
offset_right = 3086.0
offset_bottom = 1088.0

[node name="Position1" type="Control" parent="GameRoot/FlyAway" index="0"]
layout_mode = 3
anchors_preset = 0
offset_left = 109.0
offset_top = 45.0
offset_right = 149.0
offset_bottom = 85.0

[node name="Position2" type="Control" parent="GameRoot/FlyAway" index="1"]
layout_mode = 3
anchors_preset = 0
offset_left = 239.0
offset_top = 45.0
offset_right = 279.0
offset_bottom = 85.0
